# escpos-virtual-printer-emulator

./: Cargo.toml
.github/workflows/: build.yml
src/: config.rs  lib.rs  main.rs
src/emulator/: mod.rs
src/escpos/: printer.rs
src/export/: mod.rs  pdf_export.rs
src/gui/: app.rs  command_log.rs  mod.rs  receipt_viewer.rs  save_status_panel.rs  settings_panel.rs
src/networking/: server.rs
